Fix plant horizontal scroll

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -281,12 +281,18 @@ only screen and (                min-resolution: 2dppx) {
 }
 
 .hero__separator{
+  overflow: hidden;
+  height: 600px;
+	margin: -300px 0;
+	pointer-events: none;
+	user-select: none;
+}
+.hero__separator__content{
   width: 100%;
   height: 0;
+  margin-top: 300px;
   overflow: visible;
   position: relative;
-  user-select: none;
-  pointer-events: none;
 }
 .hero__separator__img{
 	--wall-height: 150px;
